# voxai-mock-tool-server

./: .env.example  .gitignore  README.md  calculate_cancellation_fee_schema.json  determine_urgency_and_sla_schema.json  main.py  pyproject.toml  save_csat_survey_schema.json  schedule_priority_callback_schema.json  send_email_notification_schema.json  submit_detailed_zendesk_ticket_schema.json  validate_pnr_format_schema.json
app/api/v1/endpoints/: agent_tools.py  call_webhooks.py  inbound_webhook.py
app/core/: config.py  logging.py
app/models/: tool_models.py  webhook_models.py
app/services/: agent_tool_service.py  call_webhook_service.py  inbound_webhook_service.py
app/services/handlers/: base_handler.py  custom_url_handler.py  database_handler.py  make_com_handler.py
